--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "version": "0.1.0",
   "author": "Chetan Verma <hello@chetanverma.com>",
   "dependencies": {
+    "@material-ui/core": "^4.11.2",
+    "@material-ui/icons": "^4.11.2",
+    "@material-ui/lab": "^4.0.0-alpha.57",
     "gatsby": "^2.26.1",
     "gatsby-image": "^2.5.0",
     "gatsby-plugin-manifest": "^2.6.1",
@@ -16,12 +19,17 @@
     "gatsby-source-filesystem": "^2.5.0",
     "gatsby-transformer-sharp": "^2.6.0",
     "node-sass": "^4.0.0",
+    "particles-bg": "^2.5.0",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^6.1.0",
+    "react-mouse-particles": "^1.1.2",
+    "react-particles-js": "^3.4.1",
     "react-reveal": "^1.2.2",
-    "react-scroll": "^1.8.1"
+    "react-router-dom": "^5.2.0",
+    "react-scroll": "^1.8.1",
+    "react-typewriting-effect": "^1.0.4"
   },
   "devDependencies": {
     "prettier": "2.1.2"
