--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-reveal": "^1.2.2",
     "react-router-dom": "^5.2.0",
     "react-scroll": "^1.8.1",
+    "react-social-icons": "^4.1.0",
     "react-typewriting-effect": "^1.0.4"
   },
   "devDependencies": {
